<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:hint="@string/str_atm"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/str_atm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:hint="@string/str_atm"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/str_hundred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:hint="@string/str_atm"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/str_twohund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:hint="@string/str_atm"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/str_fivehund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:hint="@string/str_atm"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/str_thousand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>