<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/fixLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                layout="@layout/fixbalance"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_amount"
                >

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/buttonWithdraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/rounded"
                android:elevation="5dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/str_withdraw"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"
                />
            <LinearLayout
                android:id="@+id/lastlistLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/lastTx"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/str_lasttransaction"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <include
                    android:id="@+id/lastTransactionLayout"
                    layout="@layout/last_trasction"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_alllist"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/str_yourtransaction"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <include
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/listTop"
                    layout="@layout/listtop_item"
                    android:layout_marginTop="@dimen/margin_top_inner_layout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRecyclerView"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>