<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/fixLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="8dp"
                layout="@layout/fixbalance"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fixLayout">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonWithdraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@color/purple_200"
                android:elevation="5dp"
                android:padding="15dp"
                android:text="@string/str_withdraw"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filledTextField" />

            <TextView
                android:id="@+id/lastTx"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/str_lasttransaction"
                android:layout_margin="30dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonWithdraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

              <include
                  android:id="@+id/lastTransactionLayout"
                  layout="@layout/last_trasction"
                  android:layout_marginTop="8dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginEnd="30dp"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  app:layout_constraintTop_toBottomOf="@+id/lastTx"
                  />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>